--- a/stylesheets2/content.css
+++ b/stylesheets2/content.css
@@ -1,21 +1,13 @@
-@font-face {
- font-family: 'Montserrat';
- src: url("/fonts/Montserrat-Regular.woff") format('woff');
-}
-@font-face {
- font-family: 'Polonium';
- src: url("/fonts/Polonium.woff") format('woff');
-}
 body {
   width: 100%;
   margin: 0 auto;
   background: #F6F6F6;;
-  height: 1855px;
+  height: 1488px;
   display: block;
   position: absolute;
 }
 .mirage {
-  background: url('images/mirage1280.png');
+  background: url('../images/mirage1280.png');
   width: 264px;
   height: 60px;
   background-repeat: no-repeat;
@@ -26,10 +18,10 @@ body {
 .kv0 {
   background-color: #EDF060;
   position: absolute;
-  width: 108px;
+  width: 103px;
   height: 33px;
   top: 45px;
-  left: 533px;
+  left: 716px;
 }
 .p1 {
   font-family: Montserrat;
@@ -63,142 +55,152 @@ body {
   top: 45px;
   color: #000000;
 }
-.reklama {
-  position: absolute;
-  top: 121px;
-  left: : 0px;
-  background-color: #EDF060;
-  width: 1280px;
-  height: 583px;
-  border: 4px solid #000000;
-  box-sizing: border-box;
-}
-.p0 {
-  left: 88px;
-  top: 88px;
-  font-size: 106px;
-  font-family: Polonium;
-  position: absolute;
-  letter-spacing: 0.1em;
-}
-.kr1 {
-  background-color: #EDF060;
-  width: 96px;
-  height: 96px;
-  position: absolute;
-  left: 618px;
-  top: 760px;
-  border-radius: 50%;
-}
-.kr2 {
-  border: 4px solid #000000;
-  box-sizing: border-box;
-  border: 2px #000000 solid;
-  width: 96px;
-  height: 96px;
-  position: absolute;
-  left: 592px;
-  top: 772px;
-  border-radius: 50%;
-}
-.img1 {
-  position: absolute;
-  margin: 0;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%)
-}
 .p5 {
+  position: absolute;
+  left: 88px;
+  top: 148px;
   font-family: Polonium;
   font-size: 40px;
-  position: absolute;
-  left: 88px;
-  top: 872px;
   letter-spacing: 0.1em;
 }
-.p6 {
-  font-family: Montserrat;
-  font-size: 20px;
+.t1 {
   position: absolute;
   left: 88px;
-  top: 980px;
-  width: 807px;
+  top: 238px;
+  width: 488px;
+  height: 536px;
+  border: 4px solid #000000;
+  box-sizing: border-box;
 }
-.p7 {
-  font-family: Montserrat;
-  font-size: 40px;
+.t2 {
   position: absolute;
-  left: 180px;
-  top: 1165px;
+  left: 704px;
+  top: 238px;
+  width: 488px;
+  height: 536px;
+  border: 4px solid #000000;
+  box-sizing: border-box;
 }
-.kv1 {
+.t3 {
   position: absolute;
-  width: 109px;
-  height: 109px;
   left: 88px;
-  top: 1300px;
+  top: 906px;
+  width: 488px;
+  height: 536px;
   border: 4px solid #000000;
   box-sizing: border-box;
 }
-.kv2 {
+.t4 {
   position: absolute;
-  width: 109px;
-  height: 109px;
-  left: 1257px;
-  top: 1300px;
+  left: 704px;
+  top: 906px;
+  width: 488px;
+  height: 536px;
   border: 4px solid #000000;
   box-sizing: border-box;
 }
-.p8 {
-  font-family: Montserrat;
-  font-size: 40px;
+.ochki1 {
+  background: url('../images/ochki1.png');
   position: absolute;
-  left: 104px;
-  top: 1478px;
-}
-.kv3 {
-  background-color: #EDF060;
-  position: absolute;
-  width: 475px;
-  height: 88px;
-  left: 440px;
-  top: 1608px;
-}
-.kv4 {
-  position: absolute;
-  width: 475px;
-  height: 88px;
-  left: 403px;
-  top: 1639px;
-  border: 4px solid #000000;
-  box-sizing: border-box;
-}
-.kv5 {
-  background-color: #EDF060;
-  position: absolute;
-  width: 196px;
-  height: 24px;
-  left: 542px;
-  top: 1742px;
-}
-.p9 {
-  font-family: Montserrat;
-  font-size: 40px;
-  position: absolute;
+  width: 360px;
+  height: 175px;
   margin: 0;
   top: 50%;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%);
-  color: #000000;
+  background-repeat: no-repeat;
 }
-.p11 {
-  font-family: Montserrat;
-  font-size: 20px;
+.cena {
   position: absolute;
-  left: 542px;
-  top: 1745px;
-  color: #000000;
+  background: #EDF060;
+  width: 116px;
+  height: 60px;
+  margin: 0;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  top: 445px;
+  border: 4px solid #000000;
+  box-sizing: border-box;
+}
+.cen {
+  position: absolute;
+  font-family: Montserrat;
+  font-size: 48px;
+  margin: 0;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  top: 50%;
+}
+.ochki2 {
+  background: url('../images/ochki2.png');
+  position: absolute;
+  width: 360px;
+  height: 175px;
+  margin: 0;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  background-repeat: no-repeat;
+}
+.ochki3 {
+  background: url('../images/ochki3.png');
+  position: absolute;
+  width: 360px;
+  height: 175px;
+  margin: 0;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  background-repeat: no-repeat;
+}
+.ochki4 {
+  background: url('../images/ochki4.png');
+  position: absolute;
+  width: 360px;
+  height: 175px;
+  margin: 0;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  background-repeat: no-repeat;
+}
+.vopros {
+  background: url('../images/vopros.png');
+  position: absolute;
+  width: 78px;
+  height: 74px;
+  top: 30px;
+  left: 30px;
+  background-repeat: no-repeat;
+}
+.t1:hover {
+background: url('../images/och1.png');
+}
+.t2:hover {
+background: url('../images/och2.png');
+}
+.t3:hover {
+background: url('../images/och3.png');
 
+}
+.t4:hover {
+background: url('../images/och4.png');
+}
+.t1:hover ~ .t1 .ochki1 {
+opacity: 0;
+}
+.t2:hover ~ .t2 .ochki2 {
+opacity: 0;
+}
+.t3:hover ~ .t3 .ochki3 {
+opacity: 0;
+}
+.t4:hover ~ .t4 .ochki4 {
+opacity: 0;
 }
