--- a/stylesheets1/content.css
+++ b/stylesheets1/content.css
@@ -27,7 +27,7 @@ body {
   background-color: #EDF060;
   position: absolute;
   width: 108px;
-  height: 33px;
+  height: 28px;
   top: 45px;
   left: 533px;
 }
@@ -156,6 +156,25 @@ body {
   top: 1400px;
   border: 4px solid #000000;
   box-sizing: border-box;
+}
+.gal1 {
+  background: url('../images/gal1.png');
+  position:absolute;
+  top: 0px;
+  left: 0px;
+  width: 101px;
+  height: 101px;
+}
+.gal2 {
+  background: url('../images/gal2.png');
+  position:absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  width: 88px;
+  height: 37px;
+  background-repeat: no-repeat;
 }
 .p8 {
   font-family: Montserrat;
