--- a/stylesheets2/content.css
+++ b/stylesheets2/content.css
@@ -206,6 +206,49 @@ body {
   width: 245px;
   top: 50%;
 }
+.cena2 {
+  position: absolute;
+  /* background: #EDF060; */
+  width: 186px;
+  height: 62px;
+  margin: 0;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  top: 445px;
+  border: 4px solid #000000;
+  box-sizing: border-box;
+}
+.cena21 {
+  position: absolute;
+  background: #EDF060;
+  width: 62px;
+  height: 62px;
+  top: -4px;
+  left: -4px;
+  border: 4px solid #000000;
+  box-sizing: border-box;
+}
+.pcen {
+  position: absolute;
+  font-family: Montserrat;
+  font-size: 48px;
+  margin: 0;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  top: 50%;
+}
+.cena23 {
+  position: absolute;
+  background: #EDF060;
+  width: 62px;
+  height: 62px;
+  top: -4px;
+  left: 120px;
+  border: 4px solid #000000;
+  box-sizing: border-box;
+}
 .dis {
   display: none;
 }
