--- a/stylesheets1/responsive.css
+++ b/stylesheets1/responsive.css
@@ -1,35 +1,122 @@
-@media only screen and (min-width: 900px) and (max-width: 1024px) {
+/* @media only screen and (min-width: 900px) and (max-width: 1024px) {
   body {
   }
-}
-@media only screen and (min-width: 768px) and (max-width: 900px) {
+} */
+@media only screen and (min-width: 768px) and (max-width: 1280px) {
   body {
+    width: 100%;
+    height: 1728px;
+  }
+  .reklama {
+    height: 512px;
+    top: 98px;
+  }
+  .p1, .p2, .p3, .p4 {
+    font-size: 20px;
+    top: 30px;
+  }
+  .p1 {
+    left: 27.47%;
+  }
+  .p2 {
+    left: 46.09%;
+  }
+  .p3 {
+    left: 64.32%;
+  }
+  .p4 {
+    left: 81.51%;
+  }
+  .kv0 {
+    width: 88px;
+    height: 12px;
+    left: 27.08%;
+  }
+  .mirage {
+    background: url('../images/mirage768.png');
+    width: 97px;
+    height: 22px;
+    top: 32px;
+    left: 5.99%;
+  }
+  .p0 {
+    font-size: 68px;
+    left: 5.99%;
+  }
+  .px {
+    width: 440px;
+    top: 370px;
+  }
+  .kr1 {
+    left: 45.44%;
+    top: 680px;
+  }
+  .kr2 {
+    left: 42.06%;
+    top: 692px;
+  }
+  .p5 {
+    top: 901px;
+    left: 5.99%;
+  }
+  .p6 {
+    top: 985px;
+    width: 604px;
+    left: 5.99%;
+  }
+  .kv1 {
+    top: 1281px;
+    left: 5.99%;
+  }
+  .kv2 {
+    top: 1281px;
+    right: 5.99%;
+  }
+  .p7 {
+    font-size: 25px;
+    top: 1178px;
+  }
+  .p8 {
+    font-size: 25px;
+    top: 1474px;
+  }
+  .kv3 {
+    top: 1545px;
+  }
+  .kv4 {
+    top: 1576px;
+  }
+  .kv5 {
+    top: 1689px;
+  }
+  .p11 {
+    top: 1689px;
   }
 }
-@media only screen and (min-width: 320px) and (max-width: 414px) {
+/* @media only screen and (min-width: 320px) and (max-width: 414px) {
   body {
   }
-}
+} */
 @media only screen and (min-width: 414px) and (max-width: 567px) {
   body {
   }
 }
-@media only screen and (min-width: 568px) and (max-width: 768px) {
+/* @media only screen and (min-width: 568px) and (max-width: 768px) {
   body {
   }
-}
-@media only screen and (min-width: 1024px) and (max-width: 1279px) {
+} */
+/* @media only screen and (min-width: 1024px) and (max-width: 1279px) {
   body{
   }
-}
-@media all and (min-width: 1440px) and (max-width: 1680px) {
+} */
+/* @media all and (min-width: 1440px) and (max-width: 1680px) {
   body {
   }
-}
-@media all and (min-width: 1366px) and (max-width: 1440px) {
+} */
+/* @media all and (min-width: 1366px) and (max-width: 1440px) {
   body {
   }
-}
+} */
 @media only screen  and (min-width: 1840px) {
   body {
   }
