--- a/stylesheets4/content.css
+++ b/stylesheets4/content.css
@@ -12,7 +12,7 @@ body {
   height: 60px;
   background-repeat: no-repeat;
   position: absolute;
-  left: 88px;
+  left: 6.88%;
   top: 40px;
 }
 .kv0 {
@@ -21,13 +21,13 @@ body {
   width: 124px;
   height: 28px;
   top: 45px;
-  left: 1054px;
+  left: 82.34%;
 }
 .p1 {
   font-family: Montserrat;
   font-size: 25px;
   position: absolute;
-  left: 536px;
+  left: 41.88%;
   top: 45px;
   color: #000000;
 }
@@ -35,7 +35,7 @@ body {
   font-family: Montserrat;
   font-size: 25px;
   position: absolute;
-  left: 716px;
+  left: 55.94%;
   top: 45px;
   color: #000000;
 }
@@ -43,7 +43,7 @@ body {
   font-family: Montserrat;
   font-size: 25px;
   position: absolute;
-  left: 891px;
+  left: 69.61%;
   top: 45px;
   color: #000000;
 }
@@ -51,13 +51,13 @@ body {
   font-family: Montserrat;
   font-size: 25px;
   position: absolute;
-  left: 1056px;
+  left: 82.5%;
   top: 45px;
   color: #000000;
 }
 .p5 {
   position: absolute;
-  left: 88px;
+  left: 6.88%;
   top: 148px;
   font-family: Polonium;
   font-size: 40px;
@@ -67,14 +67,14 @@ body {
   position: absolute;
   width: 1104px;
   height: 442px;
-  left: 88px;
+  left: 6.88%;
   top: 238px;
   border: 4px solid #000000;
   box-sizing: border-box;
 }
 .p6 {
   position: absolute;
-  left: 88px;
+  left: 6.88%;
   top: 700px;
   font-family: Montserrat;
   font-size: 20px;
