--- a/stylesheets4/responsive.css
+++ b/stylesheets4/responsive.css
@@ -1,35 +1,64 @@
-@media only screen and (min-width: 900px) and (max-width: 1024px) {
+/* @media only screen and (min-width: 900px) and (max-width: 1024px) {
   body {
   }
+} */
+@media only screen and (min-width: 768px) and (max-width: 1280px) {
+  body {
+    width: 100%;
+    height: 1728px;
+  }
+  .p1, .p2, .p3, .p4 {
+    font-size: 20px;
+    top: 30px;
+  }
+  .p1 {
+    left: 27.47%;
+  }
+  .p2 {
+    left: 46.09%;
+  }
+  .p3 {
+    left: 64.32%;
+  }
+  .p4 {
+    left: 81.51%;
+  }
+  .p5 {
+    top: 98px;
+    left: 5.99%;
 }
-@media only screen and (min-width: 768px) and (max-width: 900px) {
+.mirage {
+  background: url('../images/mirage768.png');
+  width: 97px;
+  height: 22px;
+  top: 32px;
+  left: 5.99%;
+}
+}
+/* @media only screen and (min-width: 320px) and (max-width: 414px) {
   body {
   }
-}
-@media only screen and (min-width: 320px) and (max-width: 414px) {
-  body {
-  }
-}
+} */
 @media only screen and (min-width: 414px) and (max-width: 567px) {
   body {
   }
 }
-@media only screen and (min-width: 568px) and (max-width: 768px) {
+/* @media only screen and (min-width: 568px) and (max-width: 768px) {
   body {
   }
-}
-@media only screen and (min-width: 1024px) and (max-width: 1279px) {
+} */
+/* @media only screen and (min-width: 1024px) and (max-width: 1279px) {
   body{
   }
-}
-@media all and (min-width: 1440px) and (max-width: 1680px) {
+} */
+/* @media all and (min-width: 1440px) and (max-width: 1680px) {
   body {
   }
-}
-@media all and (min-width: 1366px) and (max-width: 1440px) {
+} */
+/* @media all and (min-width: 1366px) and (max-width: 1440px) {
   body {
   }
-}
+} */
 @media only screen  and (min-width: 1840px) {
   body {
   }
