--- a/stylesheets2/responsive.css
+++ b/stylesheets2/responsive.css
@@ -120,8 +120,8 @@
     height: 2500px;
   }
   .t1, .t2, .t3, .t4, .t5, .t6 {
-    width: 362px;
-    height: 322px;
+    /* width: 362px;
+    height: 322px; */
     /* margin: 0; */
     left: 50%;
     margin-right: -50%;
