--- a/stylesheets1/content.css
+++ b/stylesheets1/content.css
@@ -73,6 +73,15 @@ body {
   border: 4px solid #000000;
   box-sizing: border-box;
 }
+.text {
+  position: absolute;
+  background: url('../images/text.png');
+  left: 6.88%;
+  top: 88px;
+  z-index: 1;
+  width: 1110px;
+  height: 344px;
+}
 .p0 {
   left: 6.88%;
   top: 88px;
