--- a/stylesheets1/content.css
+++ b/stylesheets1/content.css
@@ -77,10 +77,10 @@ body {
   position: absolute;
   background: url('../images/text.png');
   left: 6.88%;
-  top: 88px;
+  top: 90px;
   z-index: 1;
   width: 1110px;
-  height: 344px;
+  height: 324px;
 }
 .p0 {
   left: 6.88%;
@@ -146,7 +146,7 @@ body {
   font-size: 40px;
   position: absolute;
   left: 14.06%;
-  top: 1265px;
+  top: 1295px;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%)
@@ -156,7 +156,7 @@ body {
   width: 109px;
   height: 109px;
   left: 6.88%;
-  top: 1400px;
+  top: 1370px;
   border: 4px solid #000000;
   box-sizing: border-box;
 }
@@ -165,7 +165,7 @@ body {
   width: 109px;
   height: 109px;
   left: 85.94%;
-  top: 1400px;
+  top: 1370px;
   border: 4px solid #000000;
   box-sizing: border-box;
 }
@@ -188,6 +188,15 @@ body {
   height: 37px;
   background-repeat: no-repeat;
 }
+.strelka {
+  position: absolute;
+  background: url('../images/strelka.png');
+  top: 1403px;
+  left: 22.97%;
+  width: 822px;
+  height: 50px;
+  background-repeat: no-repeat;
+}
 .p8 {
   font-family: Montserrat;
   font-size: 40px;
@@ -203,15 +212,15 @@ body {
   position: absolute;
   width: 475px;
   height: 88px;
-  left: 34.38%;
-  top: 1708px;
+  left: 38.7%;
+  top: 1678px;
 }
 .kv4 {
   position: absolute;
   width: 475px;
   height: 88px;
-  left: 31.48%;
-  top: 1739px;
+  left: 37%;
+  top: 1709px;
   border: 4px solid #000000;
   box-sizing: border-box;
 }
