--- a/stylesheets1/content.css
+++ b/stylesheets1/content.css
@@ -257,6 +257,10 @@ body {
   color: #000000;
   left: 50%;
   margin-right: -50%;
-  transform: translate(-50%, -50%)
-
+  transform: translate(-50%, -50%);
+}
+.p2:hover {
+color: #EDF060;
+border: 1px solid #000000;
+box-sizing: border-box;
 }
