--- a/stylesheets1/content.css
+++ b/stylesheets1/content.css
@@ -1,10 +1,10 @@
 @font-face {
  font-family: 'Montserrat';
- src: url("fonts/Montserrat-Regular.woff") format('woff');
+ src: url("../fonts/Montserrat-Regular.woff") format('woff');
 }
 @font-face {
  font-family: 'Polonium';
- src: url("fonts/Polonium.woff") format('woff');
+ src: url("../fonts/Polonium.woff") format('woff');
 }
 body {
   width: 100%;
