--- a/stylesheets1/responsive.css
+++ b/stylesheets1/responsive.css
@@ -7,6 +7,9 @@
     width: 768px;
     height: 1728px;
   }
+  .text {
+    opacity: 0;
+  }
   .reklama {
     height: 512px;
     top: 98px;
@@ -104,6 +107,9 @@
 } */
 @media only screen and (min-width: 414px) and (max-width: 567px) {
   body {
+  }
+  .text {
+    opacity: 0;
   }
 }
 /* @media only screen and (min-width: 568px) and (max-width: 768px) {
