--- a/stylesheets1/content.css
+++ b/stylesheets1/content.css
@@ -260,7 +260,11 @@ body {
   transform: translate(-50%, -50%);
 }
 .p2:hover {
-color: #EDF060;
-border: 1px solid #000000;
-box-sizing: border-box;
+  color: #EDF060;
+}
+.p3:hover {
+  color: #EDF060;
+}
+.p4:hover {
+  color: #EDF060;
 }
