--- a/stylesheets1/responsive.css
+++ b/stylesheets1/responsive.css
@@ -10,7 +10,12 @@
   .text {
     opacity: 0;
   }
+  .strelka {
+    /* background: scale(0.2); */
+    display: none;
+  }
   .reklama {
+    width: 100%;
     height: 512px;
     top: 98px;
   }
@@ -53,7 +58,7 @@
   }
   .reklama {
     height: 762px;
-    width: 768px;
+    width: 100%;
   }
   .kr1 {
     left: 45.44%;
@@ -133,6 +138,7 @@
   }
   .reklama {
     height: 650px;
+    width: 100%;
   }
   .kr1 {
     top: 810px
