--- a/stylesheets3/content.css
+++ b/stylesheets3/content.css
@@ -254,3 +254,12 @@ body {
   top: 2423px;
   left: 65.63%;
 }
+.p1:hover {
+  color: #EDF060;
+}
+.p2:hover {
+  color: #EDF060;
+}
+.p4:hover {
+  color: #EDF060;
+}
