--- a/stylesheets4/content.css
+++ b/stylesheets4/content.css
@@ -79,3 +79,12 @@ body {
   font-family: Montserrat;
   font-size: 20px;
 }
+.p1:hover {
+  color: #EDF060;
+}
+.p2:hover {
+  color: #EDF060;
+}
+.p3:hover {
+  color: #EDF060;
+}
