--- a/stylesheets5/content.css
+++ b/stylesheets5/content.css
@@ -55,3 +55,15 @@ body {
   top: 45px;
   color: #000000;
 }
+.p1:hover {
+  color: #EDF060;
+}
+.p2:hover {
+  color: #EDF060;
+}
+.p3:hover {
+  color: #EDF060;
+}
+.p4:hover {
+  color: #EDF060;
+}
