--- a/stylesheets5/content.css
+++ b/stylesheets5/content.css
@@ -1,3 +1,11 @@
+@font-face {
+ font-family: 'Montserrat';
+ src: url("../fonts/Montserrat-Regular.woff") format('woff');
+}
+@font-face {
+ font-family: 'Polonium';
+ src: url("../fonts/Polonium.woff") format('woff');
+}
 body {
   width: 100%;
   margin: 0 auto;
@@ -7,7 +15,7 @@ body {
   position: absolute;
 }
 .mirage {
-  background: url('../images/mirage1280.png');
+  background: url('../images/mirage1280.svg');
   width: 264px;
   height: 60px;
   background-repeat: no-repeat;
