--- a/stylesheets5/content.css
+++ b/stylesheets5/content.css
@@ -63,6 +63,42 @@ body {
   top: 45px;
   color: #000000;
 }
+.kv1 {
+  position: absolute;
+  width: 600px;
+  height: 700px;
+  border: 4px solid #000000;
+  box-sizing: border-box;
+  left: 6.88%;
+  top: 238px;
+}
+.img1 {
+  position: absolute;
+  background: url('../images/ochki1.png');
+  width: 360px;
+  height: 175px;
+  margin: 0;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  background-repeat: no-repeat;
+}
+.px {
+  position: absolute;
+  top: 238px;
+  left: 800px;
+  font-size: 40px;
+  font-family: Montserrat;
+}
+.py {
+  position: absolute;
+  top: 328px;
+  left: 800px;
+  font-size: 20px;
+  font-family: Montserrat;
+}
+
 .p1:hover {
   color: #EDF060;
 }
@@ -74,4 +110,10 @@ body {
 }
 .p4:hover {
   color: #EDF060;
+}
+.kv1:hover > .img1 {
+opacity: 0;
+}
+.kv1:hover {
+background: url('../images/img1.png');
 }
