--- a/stylesheets1/responsive.css
+++ b/stylesheets1/responsive.css
@@ -4,7 +4,7 @@
 } */
 @media only screen and (min-width: 768px) and (max-width: 1280px) {
   body {
-    width: 768px;
+    width: 100%;
     height: 1728px;
   }
   .text {
@@ -110,6 +110,7 @@
 } */
 @media only screen and (min-width: 414px) and (max-width: 567px) {
   body {
+    width: 100%;
   }
   .text {
     opacity: 0;
@@ -133,6 +134,7 @@
 } */
 @media only screen  and (min-width: 1840px) {
   body {
+    width: 100%;
   }
   .reklama {
     height: 650px;
