--- a/stylesheets3/responsive.css
+++ b/stylesheets3/responsive.css
@@ -41,6 +41,7 @@
 } */
 @media only screen and (min-width: 414px) and (max-width: 567px) {
   body {
+    width: 100%;
   }
 }
 /* @media only screen and (min-width: 568px) and (max-width: 768px) {
@@ -61,5 +62,6 @@
 } */
 @media only screen  and (min-width: 1840px) {
   body {
+    width: 100%
   }
 }
