--- a/stylesheets1/responsive.css
+++ b/stylesheets1/responsive.css
@@ -1,7 +1,3 @@
-/* @media only screen and (min-width: 900px) and (max-width: 1024px) {
-  body {
-  }
-} */
 @media only screen and (min-width: 768px) and (max-width: 1280px) {
   body {
     width: 100%;
@@ -9,10 +5,6 @@
   }
   .text {
     opacity: 0;
-  }
-  .strelka {
-    /* background: scale(0.2); */
-    display: none;
   }
   .reklama {
     height: 512px;
@@ -104,34 +96,21 @@
     top: 1869px;
   }
 }
-/* @media only screen and (min-width: 320px) and (max-width: 414px) {
-  body {
-  }
-} */
-@media only screen and (min-width: 414px) and (max-width: 567px) {
+
+
+@media only screen and (min-width: 414px) and (max-width: 768px) {
   body {
     width: 100%;
   }
   .text {
     opacity: 0;
   }
+  .reklama {
+    opacity: 0;
+  }
 }
-/* @media only screen and (min-width: 568px) and (max-width: 768px) {
-  body {
-  }
-} */
-/* @media only screen and (min-width: 1024px) and (max-width: 1279px) {
-  body{
-  }
-} */
-/* @media all and (min-width: 1440px) and (max-width: 1680px) {
-  body {
-  }
-} */
-/* @media all and (min-width: 1366px) and (max-width: 1440px) {
-  body {
-  }
-} */
+
+
 @media only screen  and (min-width: 1840px) {
   body {
     width: 100%;
