--- a/stylesheets1/content.css
+++ b/stylesheets1/content.css
@@ -89,8 +89,9 @@ body {
   left: 6.88%;
   top: 95px;
   z-index: 1;
-  width: 1110px;
+  width: 100%;
   height: 324px;
+  background-repeat: no-repeat;
 }
 .p0 {
   left: 6.88%;
