--- a/stylesheets4/responsive.css
+++ b/stylesheets4/responsive.css
@@ -36,11 +36,11 @@
 }
 .kart {
   height: 583px;
-  width: 667px;
+  width: 86.85%;
 }
 .karta {
   height: 591px;
-  width: 675px;
+  width: 87.89%;
 }
 .p6 {
   top: 901px;
@@ -56,11 +56,11 @@
   }
   .kart {
     height: 387px;
-    width: 374px;
+    width: 90.34%;
   }
   .karta {
     height: 395px;
-    width: 382px;
+    width: 92.27%;
   }
   .p6 {
     top: 534px;
