--- a/stylesheets2/responsive.css
+++ b/stylesheets2/responsive.css
@@ -1,76 +1,4 @@
-@media only screen and (min-width: 414px) and (max-width: 768px) {
-  body {
-    width: 100%;
-    height: 2500px;
-  }
-  .t1, .t2, .t3, .t4, .t5, .t6 {
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-  }
-  .t2 {
-    top: ;
-  }
-  .t3 {
-    top: ;
-  }
-  .t4 {
-    top: ;
-  }
-  .t5 {
-    top: ;
-  }
-  .t6 {
-    top: ;
-  }
-  .ochki1 {
-    background: url('../images/ochki12.png');
-    width: 210px;
-    height: 110px;
-    background-repeat: no-repeat;
-  }
-  .ochki2 {
-    background: url('../images/ochki22.png');
-    width: 220px;
-    height: 110px;
-    background-repeat: no-repeat;
-  }
-  .ochki3 {
-    background: url('../images/ochki32.png');
-    width: 215px;
-    height: 100px;
-    background-repeat: no-repeat;
-  }
-  .ochki4 {
-    background: url('../images/ochki42.png');
-    width: 210px;
-    height: 110px;
-    background-repeat: no-repeat;
-  }
-  .ochki5 {
-    background: url('../images/ochki52.png');
-    width: 210px;
-    height: 110px;
-    background-repeat: no-repeat;
-  }
-  .ochki6 {
-    background: url('../images/ochki62.png');
-    width: 210px;
-    height: 110px;
-    background-repeat: no-repeat;
-  }
-  .cena {
-    width: 66px;
-    height: 32px;
-    top: 245px;
-  }
-  .cen {
-    font-size: 25px;
-  }
-  .t1 {
-    opacity: 0;
-  }
-}
+
 
 @media only screen  and (min-width: 1840px) {
   body {
@@ -112,6 +40,12 @@
     height: 22px;
     top: 32px;
     left: 5.99%;
+  }
+  .kv0 {
+    top: 35px;
+    width: 88px;
+    height: 12px;
+    left: 45.57%;
   }
   .t1, .t2, .t3, .t4, .t5, .t6 {
     width: 362px;
@@ -207,5 +141,78 @@
   .p5 {
     top: 98px;
     left: 5.99%;
+  }
+}
+@media only screen and (min-width: 414px) and (max-width: 768px) {
+  body {
+    width: 100%;
+    height: 2500px;
+  }
+  .t1, .t2, .t3, .t4, .t5, .t6 {
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+  }
+  .t2 {
+    top: ;
+  }
+  .t3 {
+    top: ;
+  }
+  .t4 {
+    top: ;
+  }
+  .t5 {
+    top: ;
+  }
+  .t6 {
+    top: ;
+  }
+  .ochki1 {
+    background: url('../images/ochki12.png');
+    width: 210px;
+    height: 110px;
+    background-repeat: no-repeat;
+  }
+  .ochki2 {
+    background: url('../images/ochki22.png');
+    width: 220px;
+    height: 110px;
+    background-repeat: no-repeat;
+  }
+  .ochki3 {
+    background: url('../images/ochki32.png');
+    width: 215px;
+    height: 100px;
+    background-repeat: no-repeat;
+  }
+  .ochki4 {
+    background: url('../images/ochki42.png');
+    width: 210px;
+    height: 110px;
+    background-repeat: no-repeat;
+  }
+  .ochki5 {
+    background: url('../images/ochki52.png');
+    width: 210px;
+    height: 110px;
+    background-repeat: no-repeat;
+  }
+  .ochki6 {
+    background: url('../images/ochki62.png');
+    width: 210px;
+    height: 110px;
+    background-repeat: no-repeat;
+  }
+  .cena {
+    width: 66px;
+    height: 32px;
+    top: 245px;
+  }
+  .cen {
+    font-size: 25px;
+  }
+  .t1 {
+    opacity: 0;
   }
 }
