--- a/stylesheets3/responsive.css
+++ b/stylesheets3/responsive.css
@@ -7,6 +7,12 @@
     width: 100%;
     height: 1728px;
   }
+  .kv0 {
+    top: 35px;
+    width: 76px;
+    height: 12px;
+    left: 64.06%;
+  }
   .p1, .p2, .p3, .p4 {
     font-size: 20px;
     top: 30px;
