--- a/stylesheets1/content.css
+++ b/stylesheets1/content.css
@@ -10,15 +10,9 @@ body {
   width: 100%;
   margin: 0 auto;
   background: #F6F6F6;;
-  height: 1900px;
+  height: 1700px;
   display: block;
   position: absolute;
-}
-.png {
-  cursor: url('../images/cursor.png'), auto;
-}
-.svg {
-  cursor: url('../images/cursor.svg'), auto;
 }
 .mirage {
   background: url('../images/mirage1280.svg');
@@ -153,6 +147,7 @@ body {
   left: 6.88%;
   top: 1080px;
   width: 807px;
+  line-height: 25px;
 }
 .p7 {
   font-family: Montserrat;
@@ -182,40 +177,12 @@ body {
   border: 4px solid #000000;
   box-sizing: border-box;
 }
-.gal1 {
-  background: url('../images/gal1.png');
-  position:absolute;
-  top: 0px;
-  left: 0%;
-  width: 101px;
-  height: 101px;
-}
-.gal2 {
-  background: url('../images/gal2.png');
-  position:absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
-  width: 88px;
-  height: 37px;
-  background-repeat: no-repeat;
-}
-.strelka {
-  position: absolute;
-  background: url('../images/strelka.png');
-  top: 1403px;
-  left: 22.97%;
-  width: 822px;
-  height: 50px;
-  background-repeat: no-repeat;
-}
 .p8 {
   font-family: Montserrat;
   font-size: 40px;
   position: absolute;
-  left: 8.13%;
-  top: 1578px;
+  top: 1362px;
+  width: 732px;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%)
@@ -226,14 +193,14 @@ body {
   width: 475px;
   height: 88px;
   left: 38.7%;
-  top: 1678px;
+  top: 1478px;
 }
 .kv4 {
   position: absolute;
   width: 475px;
   height: 88px;
   left: 37%;
-  top: 1709px;
+  top: 1509px;
   border: 4px solid #000000;
   box-sizing: border-box;
 }
@@ -243,7 +210,7 @@ body {
   width: 196px;
   height: 24px;
   left: 42.42%;
-  top: 1842px;
+  top: 1642px;
   left: 50%;
   margin-right: -50%;
   transform: translate(-50%, -50%)
@@ -264,7 +231,7 @@ body {
   font-size: 20px;
   position: absolute;
   left: 42.42%;
-  top: 1845px;
+  top: 1645px;
   color: #000000;
   left: 50%;
   margin-right: -50%;
