--- a/stylesheets1/responsive.css
+++ b/stylesheets1/responsive.css
@@ -1,10 +1,15 @@
 @media only screen and (min-width: 768px) and (max-width: 1280px) {
   body {
     width: 100%;
-    height: 1728px;
+    height: 1628px;
   }
   .text {
-    opacity: 0;
+    background: url('../images/text768.png');
+    left: 6.63%;
+    top: 235px;
+    width: 450px;
+    height: 190px;
+    background-repeat: no-repeat;
   }
   .reklama {
     height: 512px;
@@ -82,19 +87,28 @@
   }
   .p8 {
     font-size: 25px;
-    top: 1654px;
+    top: 1454px;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    width: 458px;
   }
   .kv3 {
-    top: 1725px;
+    top: 1525px;
+    left: 24.48%;
   }
   .kv4 {
-    top: 1756px;
+    top: 1556px;
+    left: 19.66%;
   }
   .kv5 {
-    top: 1869px;
+    top: 1669px;
+    left: 50%;
   }
   .p11 {
-    top: 1869px;
+    top: 1669px;
+    left: 50%;
+
   }
 }
 
@@ -103,11 +117,81 @@
   body {
     width: 100%;
   }
-  .text {
-    opacity: 0;
+  .p1, .p2, .p3, .p4 {
+    font-size: 10px;
+    top: 14px
+  }
+  .p1 {
+    left: 23.43%;
+  }
+  .p2 {
+    left: 44.44%;
+  }
+  .p3 {
+    left: 64.98%;
+  }
+  .p4 {
+    left: 84.54%;
+  }
+  .mirage {
+    background: url('../images/mirage414.svg');
+    width: 54px;
+    height: 13px;
+    background-repeat: no-repeat;
+    top: 16px;
+    left: 5.8%
+  }
+  .kv0 {
+    width: 40px;
+    height: 10px;
+    top: 16px;
+    left: 23.43%
+  }
+  .p0 {
+    width: 375px;
+    left: 5.8%;
+    top: 48px;
+    font-size: 36.06px;
   }
   .reklama {
-    opacity: 0;
+    height: 297px;
+  }
+  .px {
+    top: 206px;
+    left: 5.8%;
+    width: 292px;
+    font-size: 20px;
+  }
+  .text {
+    background: url('../images/text414.png');
+    left: 17.45%;
+    top: 54px;
+    width: 220px;
+    height: 100px;
+    background-repeat: no-repeat;
+    z-index: 100;
+  }
+  .kr1 {
+    top: 455px;
+  }
+  .kr2 {
+    top: 467px;
+  }
+  .p5 {
+    font-size: 30px;
+    width: 384px;
+    top: 609px;
+  }
+  .p6 {
+    top: 710px;
+    width: 346px;
+    font-size: 10px;
+    line-height: 125%;
+  }
+  .p8 {
+    width: 289px;
+    top: 837px;
+    font-size: 15px;
   }
 }
 
@@ -125,7 +209,5 @@
   .kr2 {
     top: 832px;
   }
-  .strelka {
-    left: 28%;
-  }
+
 }
