--- a/stylesheets2/responsive.css
+++ b/stylesheets2/responsive.css
@@ -34,18 +34,18 @@
     width: 100%;
     height: 1728px;
   }
+  .kv0 {
+    top: 35px;
+    width: 88px;
+    height: 12px;
+    left: 45.57%;
+  }
   .mirage {
     background: url('../images/mirage768.png');
     width: 97px;
     height: 22px;
     top: 32px;
     left: 5.99%;
-  }
-  .kv0 {
-    top: 35px;
-    width: 88px;
-    height: 12px;
-    left: 45.57%;
   }
   .t1, .t2, .t3, .t4, .t5, .t6 {
     width: 362px;
@@ -143,30 +143,69 @@
     left: 5.99%;
   }
 }
+
 @media only screen and (min-width: 414px) and (max-width: 768px) {
   body {
     width: 100%;
     height: 2500px;
+  }
+  .p1, .p2, .p3, .p4 {
+    font-size: 10px;
+    top: 14px
+  }
+  .p1 {
+    left: 23.43%;
+  }
+  .p2 {
+    left: 44.44%;
+  }
+  .p3 {
+    left: 64.98%;
+  }
+  .p4 {
+    left: 84.54%;
+  }
+  .mirage {
+    background: url('../images/mirage414.svg');
+    width: 54px;
+    height: 13px;
+    background-repeat: no-repeat;
+    top: 16px;
+    left: 5.8%;
+  }
+  .kv0 {
+    width: 40px;
+    height: 10px;
+    top: 16px;
+    left: 44.44%
+  }
+  .p5 {
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
   }
   .t1, .t2, .t3, .t4, .t5, .t6 {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
   }
+  .t1 {
+    top: 148px;
+  }
   .t2 {
-    top: ;
+    top: 518px;
   }
   .t3 {
-    top: ;
+    top: 1174px;
   }
   .t4 {
-    top: ;
+    top: 1830px;
   }
   .t5 {
-    top: ;
+    top: 2486px;
   }
   .t6 {
-    top: ;
+    top: 3142px;
   }
   .ochki1 {
     background: url('../images/ochki12.png');
@@ -207,7 +246,6 @@
   .cena {
     width: 66px;
     height: 32px;
-    top: 245px;
   }
   .cen {
     font-size: 25px;
