--- a/stylesheets3/responsive.css
+++ b/stylesheets3/responsive.css
@@ -49,6 +49,36 @@
   body {
     width: 100%;
   }
+  .p1, .p2, .p3, .p4 {
+    font-size: 10px;
+    top: 14px
+  }
+  .p1 {
+    left: 23.43%;
+  }
+  .p2 {
+    left: 44.44%;
+  }
+  .p3 {
+    left: 64.98%;
+  }
+  .p4 {
+    left: 84.54%;
+  }
+  .mirage {
+    background: url('../images/mirage414.svg');
+    width: 54px;
+    height: 13px;
+    background-repeat: no-repeat;
+    top: 16px;
+    left: 5.8%;
+  }
+  .kv0 {
+    width: 40px;
+    height: 10px;
+    top: 16px;
+    left: 64.98%
+  }
 }
 /* @media only screen and (min-width: 568px) and (max-width: 768px) {
   body {
