--- a/stylesheets1/responsive.css
+++ b/stylesheets1/responsive.css
@@ -116,6 +116,7 @@
 @media only screen and (min-width: 414px) and (max-width: 768px) {
   body {
     width: 100%;
+    height: 1100px;
   }
   .p1, .p2, .p3, .p4 {
     font-size: 10px;
@@ -190,8 +191,29 @@
   }
   .p8 {
     width: 289px;
-    top: 837px;
+    top: 847px;
     font-size: 15px;
+  }
+  .p9 {
+    font-size: 30px;
+  }
+  .kv4 {
+    width: 354px;
+    height: 66px;
+    top: 930px;
+    left: 14.35%;
+  }
+  .kv3 {
+    width: 354px;
+    height: 66px;
+    top: 907px;
+    left: 21.11%;
+  }
+  .kv5 {
+    top: 1050px;
+  }
+  .p11 {
+    top: 1050px;
   }
 }
 
